--- a/app/src/main/res/layout/item_list_img.xml
+++ b/app/src/main/res/layout/item_list_img.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:bind = "http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="imageWelfare"
-            type="com.boiledcoffee.welfare.vo.ImageWelfare" />
+            name="atlas"
+            type="com.boiledcoffee.welfare.vo.Atlas" />
     </data>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dp_270"
+        bind:cardUseCompatPadding="true">
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            bind:cardCornerRadius="10dp"
-            bind:cardUseCompatPadding="true">
-
+            android:layout_height="match_parent">
             <ImageView
-                android:background="@android:color/black"
-                bind:loadImageUrl="@{imageWelfare.getCover()}"
+                bind:loadWelfareImg="@{atlas.cover}"
+                android:scaleType="fitCenter"
                 android:layout_width="match_parent"
-                android:layout_height="250dp" />
+                android:layout_height="match_parent" />
 
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:layout_alignParentBottom="true"
+                android:textSize="@dimen/sp_14"
+                android:gravity="center"
+                android:paddingLeft="@dimen/dp_3"
+                android:paddingRight="@dimen/dp_3"
+                android:text="@{atlas.title}"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
 
-    </LinearLayout>
-
+    </android.support.v7.widget.CardView>
 </layout>
